RESOLVED FIXED99571
xss-DENIED-xsl-document-securityOrigin.xml crashes with icon assertion
https://bugs.webkit.org/show_bug.cgi?id=99571
Summary xss-DENIED-xsl-document-securityOrigin.xml crashes with icon assertion
Attachments
icondb assertion failure stacktrace (4.42 KB, text/plain)
2012-10-17 02:38 PDT, Dominik Röttsches (drott)
no flags
Patch (3.26 KB, patch)
2012-10-17 09:54 PDT, Chris Dumez
no flags
Dominik Röttsches (drott)
Comment 1 2012-10-17 02:38:08 PDT
Created attachment 169137 [details] icondb assertion failure stacktrace
Dominik Röttsches (drott)
Comment 3 2012-10-17 05:11:00 PDT
(In reply to comment #2) > similarly here > http://build.webkit.org/results/EFL%20Linux%2064-bit%20Debug%20WK2/r131586%20(4608)/results.html This one is probably something else, rather similar to bug 98596.
Chris Dumez
Comment 4 2012-10-17 06:52:42 PDT
Ok, I'll take a look at this.
Chris Dumez
Comment 5 2012-10-17 07:35:43 PDT
This test also crashes for WK2 so the problem may not be port specific.
Chris Dumez
Comment 6 2012-10-17 09:54:22 PDT
WebKit Review Bot
Comment 7 2012-10-17 10:17:10 PDT
Comment on attachment 169201 [details] Patch Clearing flags on attachment: 169201 Committed r131618: <http://trac.webkit.org/changeset/131618>
WebKit Review Bot
Comment 8 2012-10-17 10:17:14 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.