xss-DENIED-xsl-document-securityOrigin.xml crashes with icon assertion https://bugs.webkit.org/show_bug.cgi?id=99571

Patch by Christophe Dumez <christophe.dumez@intel.com> on 2012-10-17
Reviewed by Kenneth Rohde Christiansen.

Source/WebCore:

Check that the iconURL is not empty in IconController::continueLoadWithDecision()
to avoid hitting assertions later when trying to commit this empty URL to the
database. IconController::url() may indeed return an empty URL but there was
no check for it.

No new tests, already covered by http/tests/security/xss-DENIED-xsl-document-securityOrigin.xml.

* loader/icon/IconController.cpp:
(WebCore::IconController::continueLoadWithDecision):

LayoutTests:

Unskip http/tests/security/xss-DENIED-xsl-document-securityOrigin.xml
for EFL WebKit2 now that it no longer hits an assertion in
IconDatabase.

* platform/efl-wk2/TestExpectations:

Canonical link: https://commits.webkit.org/117574@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@131618 268f45cc-cd09-0410-ab3c-d52691b4dbfc